wiki/content/specifications/vec/V120/classes/variantgroup.md
---
title: VariantGroup
toc: false
type: specs
date: "2019-05-05T00:00:00+01:00"
draft: false
menu_name: vec120

# Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
weight: 
---
<html>   <head>     </head>   <body>     <p> With a VariantGroup it is possible to group VariantCodes. The semantic of this grouping should be defined with the groupType (e.g. composition, choice, etc.).      </p>    </body> </html> 
## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | variants |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [ExtendableElement]({{< relref "extendableelement.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |
| **Usage in Diagrams**   | [Variant Structure]({{< relref "../key-concepts/variant-structure" >}})<br/>  |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|identification | [String]({{< relref "string.md" >}}) | 1 | <html><body><p>Specifies a unique identification of the variant code. </p></body></html> | [VariantGroup]({{< relref "variantgroup.md" >}}) |
|aliasId | [AliasIdentification]({{< relref "aliasidentification.md" >}}) | 0..* | <html>   <head>     </head>   <body>     <p> Room to specify additional identifiers for the VariantGroup.      </p>  </body> </html> | [VariantGroup]({{< relref "variantgroup.md" >}}) |
|abbreviation | [LocalizedString]({{< relref "localizedstring.md" >}}) | 0..1 | <html>   <head>     </head>   <body>     <p> Room for a human readable short name, title etc. of the VariantGroup.      </p>  </body> </html> | [VariantGroup]({{< relref "variantgroup.md" >}}) |
|description | [AbstractLocalizedString]({{< relref "abstractlocalizedstring.md" >}}) | 0..* | <html><body><p>On optional human readable description of the variant group. </p></body></html> | [VariantGroup]({{< relref "variantgroup.md" >}}) |
|groupType | [VariantGroupType]({{< relref "variantgrouptype.md" >}}) | 0..1 | <html>   <head>     </head>   <body>     <p> Allows the classification of a VariantGroups into different types. For example: - composition (e.g. winter package) - choice (e.g. right hand / left hand driving). Agreed literals for this attribute are defined in the OpenEnumeration <i>VariantGroupType.</i>      </p>  </body> </html> | [VariantGroup]({{< relref "variantgroup.md" >}}) |

## Outgoing Relations
|    Type  |   Role   |   Mult.   |   Mult.   |   Description   |
|----------|----------|-----------|-----------|-----------------|
| [VariantCode]({{< relref "variantcode.md" >}}) | variantCode | 0..* | 0..* | References the VariantCodes that are member of the VariantGroup.   |
##  Incoming Relations
|    Type  |   Mult.  |   Role    |   Mult.   |   Description  |
|----------|----------|-----------|-----------|----------------|
| [VariantStructureNode]({{< relref "variantstructurenode.md" >}}) | 0..* | containedGroups | 0..* |  |
| [VariantGroupSpecification]({{< relref "variantgroupspecification.md" >}}) | 1 | variantGroup | 0..* | Specifies the individual VariantGroups defined in the VariantGroupSpecification.  |
